@@ -1,7 +1,7 @@
 [Project]
 FileName=PvPGNConsole.dev
 Name=PvPGNConsole
-UnitCount=272
+UnitCount=270
 Type=1
 Ver=1
 ObjFiles=
@@ -2118,16 +2118,6 @@ OverrideBuildCmd=0
 BuildCmd=
 
 [Unit208]
-FileName=..\src\compat\strchr.h
-CompileCpp=0
-Folder=compat/Header Files
-Compile=1
-Link=1
-Priority=1000
-OverrideBuildCmd=0
-BuildCmd=
-
-[Unit209]
 FileName=..\src\compat\strdup.h
 CompileCpp=0
 Folder=compat/Header Files
@@ -2137,7 +2127,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit210]
+[Unit209]
 FileName=..\src\compat\strerror.h
 CompileCpp=0
 Folder=compat/Header Files
@@ -2147,7 +2137,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit211]
+[Unit210]
 FileName=..\src\compat\strncasecmp.h
 CompileCpp=0
 Folder=compat/Header Files
@@ -2157,17 +2147,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit212]
-FileName=..\src\compat\strrchr.h
-CompileCpp=0
-Folder=compat/Header Files
-Compile=1
-Link=1
-Priority=1000
-OverrideBuildCmd=0
-BuildCmd=
-
-[Unit213]
+[Unit211]
 FileName=..\src\compat\strsep.h
 CompileCpp=0
 Folder=compat/Header Files
@@ -2177,7 +2157,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit214]
+[Unit212]
 FileName=..\src\compat\strtoul.h
 CompileCpp=0
 Folder=compat/Header Files
@@ -2187,7 +2167,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit215]
+[Unit213]
 FileName=..\src\compat\termios.h
 CompileCpp=0
 Folder=compat/Header Files
@@ -2197,7 +2177,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit216]
+[Unit214]
 FileName=..\src\compat\uint.h
 CompileCpp=0
 Folder=compat/Header Files
@@ -2207,7 +2187,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit217]
+[Unit215]
 FileName=..\src\compat\uname.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2217,7 +2197,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit218]
+[Unit216]
 FileName=..\src\compat\gettimeofday.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2227,7 +2207,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit219]
+[Unit217]
 FileName=..\src\compat\inet_aton.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2237,7 +2217,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit220]
+[Unit218]
 FileName=..\src\compat\inet_ntoa.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2247,7 +2227,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit221]
+[Unit219]
 FileName=..\src\compat\mmap.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2257,7 +2237,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit222]
+[Unit220]
 FileName=..\src\compat\pdir.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2267,7 +2247,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit223]
+[Unit221]
 FileName=..\src\compat\psock.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2277,7 +2257,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit224]
+[Unit222]
 FileName=..\src\compat\strcasecmp.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2287,7 +2267,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit225]
+[Unit223]
 FileName=..\src\compat\strdup.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2297,7 +2277,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit226]
+[Unit224]
 FileName=..\src\compat\strerror.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2307,7 +2287,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit227]
+[Unit225]
 FileName=..\src\compat\strncasecmp.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2317,7 +2297,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit228]
+[Unit226]
 FileName=..\src\compat\strsep.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2327,7 +2307,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit229]
+[Unit227]
 FileName=..\src\compat\strtoul.cpp
 CompileCpp=0
 Folder=compat/Source Files
@@ -2337,7 +2317,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit230]
+[Unit228]
 FileName=..\src\tinycdb\cdb_int.h
 CompileCpp=0
 Folder=tinycdb/Header Files
@@ -2347,7 +2327,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit231]
+[Unit229]
 FileName=..\src\tinycdb\cdb_unpack.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2357,7 +2337,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit232]
+[Unit230]
 FileName=..\src\tinycdb\cdb_find.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2367,7 +2347,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit233]
+[Unit231]
 FileName=..\src\tinycdb\cdb_findnext.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2377,7 +2357,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit234]
+[Unit232]
 FileName=..\src\tinycdb\cdb_hash.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2387,7 +2367,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit235]
+[Unit233]
 FileName=..\src\tinycdb\cdb_init.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2397,7 +2377,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit236]
+[Unit234]
 FileName=..\src\tinycdb\cdb_make.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2407,7 +2387,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit237]
+[Unit235]
 FileName=..\src\tinycdb\cdb_make_add.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2417,7 +2397,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit238]
+[Unit236]
 FileName=..\src\tinycdb\cdb_make_find.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2427,7 +2407,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit239]
+[Unit237]
 FileName=..\src\tinycdb\cdb_make_put.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2437,7 +2417,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit240]
+[Unit238]
 FileName=..\src\tinycdb\cdb_seek.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2447,7 +2427,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit241]
+[Unit239]
 FileName=..\src\tinycdb\cdb_seq.cpp
 CompileCpp=0
 Folder=tinycdb/Source Files
@@ -2457,7 +2437,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit242]
+[Unit240]
 FileName=..\src\win32\service.h
 CompileCpp=0
 Folder=win32/Header Files
@@ -2467,7 +2447,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit243]
+[Unit241]
 FileName=..\src\win32\service.cpp
 CompileCpp=0
 Folder=win32/Source Files
@@ -2477,7 +2457,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit244]
+[Unit242]
 FileName=..\src\bnetd\team.h
 CompileCpp=0
 Folder=bnetd/Header Files
@@ -2487,7 +2467,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit245]
+[Unit243]
 FileName=..\src\bnetd\team.cpp
 CompileCpp=0
 Folder=bnetd/Source Files
@@ -2497,7 +2477,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit246]
+[Unit244]
 FileName=..\src\common\rcm.h
 CompileCpp=0
 Folder=common/Header Files
@@ -2507,7 +2487,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit247]
+[Unit245]
 FileName=..\src\common\rcm.cpp
 CompileCpp=0
 Folder=common/Source Files
@@ -2517,7 +2497,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit248]
+[Unit246]
 FileName=..\src\bnetd\attr.h
 CompileCpp=0
 Folder=bnetd/Header Files
@@ -2527,7 +2507,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit249]
+[Unit247]
 FileName=..\src\bnetd\attrlayer.h
 CompileCpp=0
 Folder=bnetd/Header Files
@@ -2537,7 +2517,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit250]
+[Unit248]
 FileName=..\src\bnetd\attrgroup.h
 CompileCpp=0
 Folder=bnetd/Header Files
@@ -2547,7 +2527,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit251]
+[Unit249]
 FileName=..\src\bnetd\attrlayer.cpp
 CompileCpp=0
 Folder=bnetd/Source Files
@@ -2557,7 +2537,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit252]
+[Unit250]
 FileName=..\src\bnetd\attrgroup.cpp
 CompileCpp=0
 Folder=bnetd/Source Files
@@ -2567,7 +2547,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit253]
+[Unit251]
 FileName=..\src\bnetd\cmdline.h
 CompileCpp=0
 Folder=bnetd/Header Files
@@ -2577,7 +2557,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit254]
+[Unit252]
 FileName=..\src\bnetd\cmdline.cpp
 CompileCpp=0
 Folder=bnetd/Source Files
@@ -2587,7 +2567,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit255]
+[Unit253]
 FileName=..\src\common\conf.h
 CompileCpp=0
 Folder=common/Header Files
@@ -2597,7 +2577,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit256]
+[Unit254]
 FileName=..\src\common\conf.cpp
 CompileCpp=0
 Folder=common/Source Files
@@ -2607,7 +2587,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit257]
+[Unit255]
 FileName=..\src\common\systemerror.h
 CompileCpp=1
 Folder=common/Header Files
@@ -2617,7 +2597,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit258]
+[Unit256]
 FileName=..\src\common\systemerror.cpp
 CompileCpp=1
 Folder=common/Source Files
@@ -2627,7 +2607,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit259]
+[Unit257]
 FileName=..\src\common\xstr.h
 CompileCpp=1
 Folder=common/Header Files
@@ -2637,7 +2617,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit260]
+[Unit258]
 FileName=..\src\common\xstr.cpp
 CompileCpp=1
 Folder=common/Source Files
@@ -2647,7 +2627,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit261]
+[Unit259]
 FileName=..\src\bnetd\handle_wol.h
 CompileCpp=1
 Folder=bnetd/Header Files
@@ -2657,7 +2637,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit262]
+[Unit260]
 FileName=..\src\bnetd\handle_wol.cpp
 CompileCpp=1
 Folder=bnetd/Source Files
@@ -2667,7 +2647,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit263]
+[Unit261]
 FileName=..\src\bnetd\sql_common.cpp
 CompileCpp=1
 Folder=bnetd/Source Files
@@ -2677,7 +2657,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit264]
+[Unit262]
 FileName=..\src\bnetd\sql_common.h
 CompileCpp=1
 Folder=bnetd/Header Files
@@ -2687,7 +2667,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit265]
+[Unit263]
 FileName=..\src\bnetd\storage_sql2.cpp
 CompileCpp=1
 Folder=bnetd/Source Files
@@ -2697,7 +2677,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit266]
+[Unit264]
 FileName=..\src\bnetd\storage_sql2.h
 CompileCpp=1
 Folder=bnetd/Header Files
@@ -2707,7 +2687,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit267]
+[Unit265]
 FileName=..\src\bnetd\handle_irc_common.h
 CompileCpp=1
 Folder=bnetd/Header Files
@@ -2717,7 +2697,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit268]
+[Unit266]
 FileName=..\src\bnetd\handle_irc_common.cpp
 CompileCpp=1
 Folder=bnetd/Source Files
@@ -2727,7 +2707,7 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit269]
+[Unit267]
 FileName=..\src\common\wolhash.h
 CompileCpp=1
 Folder=common/Header Files
@@ -2737,10 +2717,30 @@ Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
 
-[Unit270]
+[Unit268]
 FileName=..\src\common\wolhash.cpp
 CompileCpp=1
 Folder=common/Source Files
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit269]
+FileName=..\src\bnetd\handle_apireg.h
+CompileCpp=1
+Folder=bnetd/Header Files
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit270]
+FileName=..\src\bnetd\handle_apireg.cpp
+CompileCpp=1
+Folder=bnetd/Source Files
 Compile=1
 Link=1
 Priority=1000
@@ -2766,3 +2766,4 @@ Link=1
 Priority=1000
 OverrideBuildCmd=0
 BuildCmd=
+
